--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>HTML&amp;CSS</title>
 </head>
 <body>
-    <h1>
-        "Лабораторные работы"
-    </h1>
+    <h1>        "Лабораторные работы"    </h1>
 </body>
 </html>
