--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Задание 1.1</title>
+</head>
 <!-- СОЗДАЙТЕ ЗАГОЛОВОК ПЕРВОГО УРОВНЯ -->
 <h1>Основные элементы языка HTML</h1>
 <!-- ОТРИСУЙТЕ ГОРИЗОНТАЛЬНУЮ ЛИНИЮ -->
