--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HTML&amp;CSS</title>
 </head>
 <body>
-    <h1>        "Лабораторные работы"    </h1>
+    <h1>        Лабораторные работы    </h1>
     <a href="lab1/lab1_1.html">
 </body>
 </html>
