--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>        Лабораторные работы    </h1>
-    <a href="lab1/lab1_1.html">
+    <li><a href="/lab1/lab1_1.html"></li>
 </body>
 </html>
