--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>        Лабораторные работы    </h1>
-    <li><a href="/lab1/lab1_1.html"></li>
+    <ul>
+        <li><a href="/lab1/lab1_1.html">Задание 1</a></li>
+        <li><a href="/lab1/lab1_2.html">Задание 2</a></li>
+
+    </ul>
+
 </body>
 </html>
