--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -9,7 +9,7 @@
 <nav>
 <!-- Сделайте элементы списка ссылками на соответствующие заголовки h2 -->
 	<ul>
-		<li>Как сделать ссылку</li>
+		<li><a href="Как сделать ссылку"></a></li>
 		<li>Цвет ссылок</li>
 		<li>Атрибут target</li>
 		<li>Изображение в качестве ссылки</li>
