--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -9,7 +9,7 @@
 <nav>
 <!-- Сделайте элементы списка ссылками на соответствующие заголовки h2 -->
 	<ul>
-		<h1><a href="https://github.com/daria31pm/daria31pm.github.io/blob/2facd562a0e17047b37d9eb92ad51e6316c092f8/lab1/lab1_2.html#L26">Как сделать ссылку</a></h1>
+		<h1><a href="[<h2>Как сделать ссылку</h2>](https://github.com/daria31pm/daria31pm.github.io/blob/193dd6ae42508e66e048fca0968368014c7703c7/lab1/lab1_2.html#L26)">Как сделать ссылку</a></h1>
 		<li>Цвет ссылок</li>
 		<li>Атрибут target</li>
 		<li>Изображение в качестве ссылки</li>
