--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -8,7 +8,7 @@
 <h1>Ссылки</h1>
 <nav>
   <ul>
-    <li><a href="#sссылка">Как сделать ссылку</a></li>
+    <li><a href="#ссылка">Как сделать ссылку</a></li>
     <li><a href="#цвет-ссылок">Цвет ссылок</a></li>
     <li><a href="#атрибут-target">Атрибут target</a></li>
     <li><a href="#изображение-ссылки">Изображение в качестве ссылки</a></li>
