--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/lab1/lab1_1.html">Задание 1</a></li>
         <li><a href="/lab1/lab1_2.html">Задание 2</a></li>
+        <li><a href="/lab1/lab1_3.html">Задание 3</a></li>
 
     </ul>
 
