--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -6,7 +6,7 @@
 <body>
 	<section class="center">
 		<h1>Изображения</h1>
-        <code><img src="C:\Users\student\AppData\Local\Temp\99ef8712-eecd-432e-a5e7-acba237a4be7_images.zip.be7\images\aquaria.jpg"></code>
+        <img src="C:\Users\student\AppData\Local\Temp\99ef8712-eecd-432e-a5e7-acba237a4be7_images.zip.be7\images\aquaria.jpg">
 		<h2>Элемент <code>img</code></h2>
 
 		<p>Элемент <code>img</code> внедряет изображение в текущий документ в месте определения элемента. Элемент <code>img</code> не имеет содержимого — он замещается на ходу изображением, указанным в атрибуте <code>src</code>.</p>
