--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
-<!DOCTYPE html>
-<html lang="ru">
+< IDOCTYPE html>
+«html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML&amp;CSS</title>
+< meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>HTML&amp; CSS</title>
 </head>
 <body>
-    <h1>        Лабораторные работы    </h1>
-    <ul>
-        <li><a href="/lab1/lab1_1.html">Задание 1</a></li>
-        <li><a href="/lab1/lab1_2.html">Задание 2</a></li>
-        <li><a href="/lab1/lab1_3.html">Задание 3</a></li>
-        <li><a href="/lab1/lab1_4.html">Задание 4</a></li>
-
-    </ul>
-
-</body>
-</html>
+<h1>Лабораторные работы</h1>
+<h2 >Лабораторная работа №1</h2>
+<ul>
+<li><a href="lab1/lab1_1.html">Задание 1</a></li>
+<li><a href="lab1/lab1_2.html">Задание 2</a></li>
+<li><a href="lab1/lab1_3.html">Задание 3</а></li>
+<li><a href="lab1/lab1_3.html">Задание 4</а></li>
+<li><a href="lab1/lab1_3.html">Задание 5</а></li>
+</ul>
+<h2 >Лабораторная работа №2</h2>
+</ul>
+<li><a href="lab2/lab2_1.html">Задание 1</a></li>
+<li><a href="lab2/lab2_2.html">Задание 2</a></li>
+<li><a href="lab2/iframes/lab2_3.html">Задание 3</а></li>
+<li><a href="lab2/lab2_4.html">Задание 4</а></li>
+<li><a href="lab2/lab2_5.html">Задание 5</а></li>
+<h2 >Лабораторная работа №3</h2>
+</ul>
+<li><a href="lab3/lab3_1.html">Задание 1</a></li>
+<li><a href="lab3/lab3_2.html">Задание 2</a></li>
+<li><a href="lab3/lab3_3.html">Задание эксперимент</а></li>
