--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<DOCTYPE html>
-«html lang="ru">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
-< meta charset="UTF-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HTML&amp; CSS</title>
 </head>
