--- a/index.html
+++ b/index.html
@@ -1,29 +1,69 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HTML&amp; CSS</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML&amp;CSS</title>
 </head>
 <body>
-<h1>Лабораторные работы</h1>
-<h2 >Лабораторная работа №1</h2>
+    <h1>Лабораторные работы</h1>
+
+<h2>Лабораторная работа № 1</h2>
 <ul>
-<li><a href="lab1/lab1_1.html">Задание 1</a></li>
-<li><a href="lab1/lab1_2.html">Задание 2</a></li>
-<li><a href="lab1/lab1_3.html">Задание 3</а></li>
-<li><a href="lab1/lab1_4.html">Задание 4</а></li>
-<li><a href="lab1/lab1_5.html">Задание 5</а></li>
+    <li><a href="lab1/lab1_1.html">Задание 1</a></li>
+    <li><a href="lab1/lab1_2.html">Задание 2</a></li>
+    <li><a href="lab1/lab1_3.html">Задание 3</a></li>
+    <li><a href="lab1/lab1_4.html">Задание 4</a></li>
+    <li><a href="lab1/lab1_5.html">Задание 5</a></li>
 </ul>
-<h2 >Лабораторная работа №2</h2>
+
+<h2>Лабораторная работа № 2</h2>
 <ul>
-<li><a href="lab2/lab2_1.html">Задание 1</a></li>
-<li><a href="lab2/lab2_2.html">Задание 2</a></li>
-<li><a href="lab2/iframes/lab2_3.html">Задание 3</а></li>
-<li><a href="lab2/lab2_4.html">Задание 4</а></li>
-<li><a href="lab2/lab2_5.html">Задание 5</а></li>
-<h2 >Лабораторная работа №3</h2>
+    <li><a href="lab2/lab2_1.html">Задание 1</a></li>
+    <li><a href="lab2/lab2_2.html">Задание 2</a></li>
+    <li><a href="lab2/iframes/lab2_3.html">Задание 3</a></li>
+    <li><a href="lab2/lab2_4.html">Задание 4</a></li>
+    <li><a href="lab2/lab2_5.html">Задание 5</a></li>
+</ul>
+
+<h2>Лабораторная работа № 3</h2>
 <ul>
-<li><a href="lab3/lab3_1.html">Задание 1</a></li>
-<li><a href="lab3/lab3_2.html">Задание 2</a></li>
-<li><a href="lab3/lab3_3.html">Задание эксперимент</а></li>
+    <li><a href="lab3/lab3_1.html">Задание 1</a></li>
+    <li><a href="lab3/lab3_2.html">Задание 2</a></li>
+    <li><a href="lab3/lab3_3.html">Задание эксперимент со свойствами стилей</a></li>
+    <li><a href="lab3/lab3_33.html">Задание с rect.css</a></li>
+    <li><a href="lab3/lab3_333.html">Задание с bootstrap-reboot.css</a></li>
+</ul>
+
+<h2>Лабораторная работа № 4</h2>
+<ul>
+    <li><a href="lab4/lab4_1.html">Задание 1</a></li>
+    <li><a href="lab4/lab4_2.html">Задание 2</a></li>
+    <li><a href="lab4/lab4_3.html">Задание 3</a></li>
+    <li><a href="lab4/lab4_4.html">Задание 4</a></li>
+    <li><a href="lab4/lab4_5.html">Задание 5</a></li>
+</ul>
+
+<h2>Лабораторная работа № 5</h2>
+<ul>
+    <li><a href="lab5/lab5_1.html">Задание 1</a></li>
+    <li><a href="lab5/lab5_2.html">Задание 2</a></li>
+    <li><a href="lab5/lab5_3.html">Задание 3</a></li>
+    <li><a href="lab5/lab5_4.html">Задание 4</a></li>
+    <li><a href="lab5/lab5_5.html">Задание 5</a></li>
+</ul>
+
+<h2>Лабораторная работа № 6</h2>
+<ul>
+    <li><a href="lab6/lab6_1.html">Задание 1</a></li>
+
+</ul>
+
+<h2>Лабораторная работа № 7</h2>
+<ul>
+    <li><a href="lab7/lab7_1.html">Задание 1</a></li>
+
+</ul>
+
+</body>
+</html>
