--- a/lab1/lab1_5.html
+++ b/lab1/lab1_5.html
@@ -13,7 +13,7 @@
 <body>
     <h1> Лабораторная работа № 1 </h1>
 
-    <img src="pp.jpg" usemap="#image-map" alt="Задания">
+    <img src="image.png" usemap="#image-map" alt="Задания">
 
     <map name="image-map">
         <area target="_blank" alt="Область 1" title="Область 1" href="lab1_1.html" coords="34,133,218,396" shape="rect"> 
