--- a/lab1/lab1_5.html
+++ b/lab1/lab1_5.html
@@ -2,27 +2,17 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Карта изображений для заданий</title>
-    <style>
-        img {
-            max-width: 100%; 
-            height: auto; 
-        }
-    </style>
+    <title>Карта-изображение</title>
 </head>
+
 <body>
-    <h1> Лабораторная работа № 1 </h1>
-
-    <img src="image.png" usemap="#image-map" alt="Задания">
-
-<img src="pp.jpg" usemap="#image-map" alt="Задания">
-<map name="image-map">
-    <area target="" alt="" title="" href="#" coords="1,2,246,253" shape="rect"></area>
-    <area target="" alt="" title="" href="#" coords="246,2,494,253" shape="rect"></area>
-    <area target="" alt="" title="" href="#" coords="-6,253,247,500" shape="rect"></area>
-    <area target="" alt="" title="" href="#" coords="247,253,495,500" shape="rect"></area>
-</map>
-    
-
+    <img src="image/pp.jpg" usemap="#image-map" alt="Навигация">
+    <map name="image-map">
+        <area target="" alt="" title="" href="#" coords="1,2,246,253" shape="rect"></area>
+        <area target="" alt="" title="" href="#" coords="246,2,494,253" shape="rect"></area>
+        <area target="" alt="" title="" href="#" coords="-6,253,247,500" shape="rect"></area>
+        <area target="" alt="" title="" href="#" coords="247,253,495,500" shape="rect"></area>
+    </map>
+    <p>Моя карта-изображение</a>.
 </body>
 </html>
