--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -23,8 +23,8 @@
 <h2>Демонстрация добавления встроенного фрейма</h2>
 через поделиться!
 <figure>
-  <iframe src="https://vkvideo.ru/video-220394706_456241030" width="560" height="315" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-  <figcaption>Уоллес и Громит</figcaption>
+  <iframe src="https://vkvideo.ru/video-155284657_456243765" width="560" height="315" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+  <figcaption>Золушка</figcaption>
 </figure>
 
 
