--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -23,7 +23,7 @@
 <h2>Демонстрация добавления встроенного фрейма</h2>
 через поделиться!
 <figure>
-  <iframe src="https://vkvideo.ru/video-155284657_456243765" width="560" height="315" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+  <iframe src="<iframe src="https://vkvideo.ru/video_ext.php?oid=-37409291&id=456242384&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>" width="560" height="315" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
   <figcaption>Золушка</figcaption>
 </figure>
 
