--- a/lab4/lab4_4.html
+++ b/lab4/lab4_4.html
@@ -3,61 +3,72 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Вертикальное меню с Font Awesome</title>
+    <title>Оформление вертикального меню</title>
+
+    <!-- connect font awesome -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
+
     <style>
         html {
-            background: #dfd7d7;
+            background: #f0f0f0;
         }
 
         .menu {
             width: 200px;
-            background: #ffffff;
-            font-family: Arial, sans-serif;
+            height: 450px;
+
+            background: #fff;
+
+            padding-top: 5px;
+
         }
 
         .menu ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
+            /* list-style-image: url(src/pic/minus.gif); */
+            list-style-type: none;
+            margin-bottom: 10px;
+
+            padding-left: 30px;
+            position: relative;
         }
 
-        .menu li {
+        .menu li::before {
+            content: '\f147';
+            font-family: FontAwesome;
+            width: 16px;
+            height: 16px;
+            position: absolute;
+            /* background: url("src/css_sprites.png") no-repeat -10px -10px; */
+            left: 10px;
+
+        }
+
+        .menu li li {
+            margin-left: -10px;
             position: relative;
+        }
+
+        .menu li li::before {
+            content: '\f192';
+            font-family: FontAwesome;
+            width: 16px;
+            height: 16px;
+            position: absolute;
+            /* background: url("src/css_sprites.png") no-repeat -10px -46px; */
+
+            left: -20px;
         }
 
         .menu li a {
             display: block;
-            padding: 1px 12px 1px 30px;
-            text-decoration: none;
-            color: #333;
-            position: relative;
+            color: #369;
+
         }
 
-        .menu li a::before {
-            content: "\f192"; 
-            font-family: "Font Awesome 6 Free";
-            position: absolute;
-            left: 5px;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-
-        .menu li.has-submenu>a::before {
-            content: "\f147"; 
-            font-family: "Font Awesome 6 Free";
-            font-weight: 100;
-        }
-
-       
         .menu li a:hover {
-            background-color: #f0f0f0;
-        }
-
-        .menu ul ul {
-            padding-left: 20px;
+            color: #6092c4;
         }
     </style>
 </head>
@@ -65,7 +76,7 @@
 <body>
     <nav class="menu">
         <ul>
-            <li class="has-submenu"><a href="#">Фильмы</a>
+            <li><a href="#">Фильмы</a>
                 <ul>
                     <li><a href="#">Экшн</a></li>
                     <li><a href="#">Мелодрамы</a></li>
@@ -73,7 +84,7 @@
                     <li><a href="#">Семейные</a></li>
                 </ul>
             </li>
-            <li class="has-submenu"><a href="#">Музыка</a>
+            <li><a href="#">Музыка</a>
                 <ul>
                     <li><a href="#">Классика</a></li>
                     <li><a href="#">Джаз</a></li>
@@ -81,7 +92,7 @@
                     <li><a href="#">Грандж</a></li>
                 </ul>
             </li>
-            <li class="has-submenu"><a href="#">Софт</a>
+            <li><a href="#">Софт</a>
                 <ul>
                     <li><a href="#">Графика</a></li>
                     <li><a href="#">3D-моделирование</a></li>
@@ -89,7 +100,7 @@
                     <li><a href="#">Переводчики</a></li>
                 </ul>
             </li>
-            <li class="has-submenu"><a href="#">Игры</a>
+            <li><a href="#">Игры</a>
                 <ul>
                     <li><a href="#">РПГ</a></li>
                     <li><a href="#">Шутеры</a></li>
