--- a/lab5/lab5_1.html
+++ b/lab5/lab5_1.html
@@ -1,55 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="utf-8">
-    <title>Использование float при построении горизонтального меню</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Использование float при построении горизонтального меню</title>
+	<style>
+		.menu {
+			list-style: none;
+			margin: 0;
+			padding: 10px;
+		}
 
-        .menu {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
+		.menu li {
+			float: left;
+			margin-right: 10px;
+		}
 
-        .menu li {
-            float: left; 
-            margin: 5px; 
-        }
-
-        .menu li a {
-            display: block;
-            width: 100px; 
-            height: 50px; 
-            text-align: center; 
-            line-height: 50px;             
-            background-color: #ccf; 
-            text-decoration: none; 
-            color: #523efe; 
-            transition: background-color 0.3s; 
-        }
-
-        .menu li a:hover {
-            background-color: #aaf; 
-        }
-
-        .menu::after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-    </style>
+		.menu li a {
+			display: block;
+			padding: 10px;
+			background: #ccf;
+		}
+	</style>
 </head>
+
 <body>
-    <ul class="menu">
-        <li><a href="#">Пункт 1</a></li>
-        <li><a href="#">Пункт 2</a></li>
-        <li><a href="#">Пункт 3</a></li>
-        <li><a href="#">Пункт 4</a></li>
-        <li><a href="#">Пункт 5</a></li>
-    </ul>
+	<ul class="menu">
+		<li><a href="#">Пункт 1</a></li>
+		<li><a href="#">Пункт 2</a></li>
+		<li><a href="#">Пункт 3</a></li>
+		<li><a href="#">Пункт 4</a></li>
+		<li><a href="#">Пункт 5</a></li>
+	</ul>
 </body>
+
 </html>
