--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -23,8 +23,8 @@
 <h2>Демонстрация добавления встроенного фрейма</h2>
 через поделиться!
 <figure>
-  <iframe src="<iframe src="https://vkvideo.ru/video_ext.php?oid=-37409291&id=456242384&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>" width="560" height="315" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-  <figcaption>Золушка</figcaption>
+  <iframe src="https://vkvideo.ru/video_ext.php?oid=-202869502&id=456239024&hd=2&autoplay=1" width="560" height="315" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+  <figcaption>Видео физмат</figcaption>
 </figure>
 
 
@@ -35,9 +35,9 @@
     src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad264f6c5e779a4e8d174a6325149d92101b35b996cf4366b6537787c90096e0b&amp;source=constructor"
     width="600"
     height="450"
-    title="Карта Орла от Яндекс.Карты"
+    title="Карта города Орёл от Яндекс.Карт"
   ></iframe>
-  <figcaption>Карта Орла от Яндекс.Карты</figcaption>
+  <figcaption>Карта города Орёл от Яндекс.Карт</figcaption>
 </figure>
 
 <h2>Демонстрация добавления на страницу видео</h2>
