--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -1,88 +1,89 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <title>Форма</title>
-    <style>
-        fieldset {
-            border: none;
-            padding: 0;
-        }
-        legend {
-            display: none;
-        }
-    </style>
 </head>
+
 <body>
     <h1>Форма регистрации пользователя</h1>
     <form action="#" method="post">
+        <table>
+            <tr>
+                <td>E-mail</td>
+                <td><input type="email" name="email" placeholder="Введите e-mail" required></td>
+            </tr>
+            <tr>
+                <td>Пароль</td>
+                <td><input type="password" name="password" placeholder="Введите пароль" required></td>
+            </tr>
+            <tr>
+                <td>Пол</td>
+                <td>
+                    <input type="radio" name="gender" id="male" value="male">
+                    <label for="male">Мужчина</label>
+                    <input type="radio" name="gender" id="female" value="female">
+                    <label for="female">Женщина</label>
+                </td>
+            </tr>
+            <tr>
+                <td>Год рождения</td>
+                <td>
+                    <select name="birth_year">
+                        <option value="1981"> 1981 </option>
+                        <option value="1982"> 1982 </option>
+                        <option value="1983"> 1983 </option>
+                        <option value="1984"> 1984 </option>
+                        <option value="1985"> 1985 </option>
+                        <option value="1986"> 1986 </option>
+                        <option value="1987"> 1987 </option>
+                        <option value="1988"> 1988 </option>
+                        <option value="1989"> 1989 </option>
+                        <option value="1990"> 1990 </option>
+                        <option value="1991"> 1991 </option>
+                        <option value="1992"> 1992 </option>
+                        <option value="1993"> 1993 </option>
+                        <option value="1994"> 1994 </option>
+                        <option value="1995"> 1995 </option>
+                        <option value="1996"> 1996 </option>
+                        <option value="1997"> 1997 </option>
+                        <option value="1998"> 1998 </option>
+                        <option value="1999"> 1999 </option>
+                        <option value="2000"> 2000 </option>
+                        <option value="2001"> 2001 </option>
+                        <option value="2002"> 2002 </option>
+                        <option value="2003"> 2003 </option>
+                        <option value="2004"> 2004 </option>
+                        <option value="2005"> 2005 </option>
+                        <option value="2006"> 2006 </option>
+                    </select>
+                    -ый (-ой)
+                </td>
 
-        <fieldset>
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" placeholder="example@email.com" required><br><br>
-
-            <label for="password">Пароль:</label>
-            <input type="password" id="password" name="password" placeholder="Придумайте пароль" required><br><br>
-
-            <label for="birthdate">Год рождения:</label>
-            <select id="birthdate_year" name="birthdate_year">
-                <option value="">Год</option>
-                <option value="2023">2023</option>
-                <option value="2022">2022</option>
-                <option value="2021">2021</option>
-                <option value="2020">2020</option>
-                <option value="2019">2019</option>
-                <option value="2018">2018</option>
-                <option value="2017">2017</option>
-                <option value="2016">2016</option>
-                <option value="2015">2015</option>
-                <option value="2014">2014</option>
-                <option value="2013">2013</option>
-                <option value="2012">2012</option>
-                <option value="2011">2011</option>
-                <option value="2010">2010</option>
-                <option value="2009">2009</option>
-                <option value="2008">2008</option>
-                <option value="2007">2007</option>
-                <option value="2006">2006</option>
-                <option value="2005">2005</option>
-                <option value="2004">2004</option>
-                <option value="2003">2003</option>
-                <option value="2002">2002</option>
-                <option value="2001">2001</option>
-                <option value="2000">2000</option>
-                <option value="1999">1999</option>
-                <option value="1998">1998</option>
-                <option value="1997">1997</option>
-                <option value="1996">1996</option>
-                <option value="1995">1995</option>
-                <option value="1994">1994</option>
-                <option value="1993">1993</option>
-                <option value="1992">1992</option>
-                <option value="1991">1991</option>
-                <option value="1990">1990</option>
-              </select>
-              <br>
-
-        </fieldset>
-
-        <fieldset>
-            <p>Пол:</p>
-            <label><input type="radio" name="gender" value="male" id = "male"> Мужской</label><br>
-            <label><input type="radio" name="gender" value="female" id = "female"> Женский</label><br><br>
-
-            <p>Предпочитаемые языки:</p>
-            <label><input type="checkbox" name="languages" value="russian" checked disabled> Русский</label><br>
-            <label><input type="checkbox" name="languages" value="english"> Английский</label><br>
-            <label><input type="checkbox" name="languages" value="spanish"> Испанский</label><br><br>
-
-            <label for="bio">О себе:</label><br>
-            <textarea id="bio" name="bio" rows="4" cols="50" placeholder="Расскажите о себе"></textarea><br><br>
-        </fieldset>
-
-        <input type="submit" value="Готово">
-        <input type="reset" value="Очистить">
+            </tr>
+            <tr>
+                <td>Я знаю</td>
+                <td>
+                    <label><input type="checkbox" name="lang" value="rus" checked disabled> Русский</label><br>
+                    <label><input type="checkbox" name="lang" value="spanish"> Испанский</label><br>
+                    <label><input type="checkbox" name="lang" value="german"> Немецкий</label><br>
+                    <label><input type="checkbox" name="lang" value="eng"> Английский</label><br>
+                    <label><input type="checkbox" name="lang" value="chinese"> Китайский</label>
+                </td>
+            </tr>
+            <tr>
+                <td>Обо мне</td>
+                <td><textarea name="about" rows="6" cols="30" placeholder="Напишите коротко о себе"></textarea></td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <input type="submit" value="Готово">
+                    <input type="reset" value="Очистить">
+                </td>
+            </tr>
+        </table>
     </form>
 </body>
+
 </html>
