--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Форма</title>
 </head>
-
 <body>
     <h1>Форма регистрации пользователя</h1>
-    <form action="#" method="post">
+    <form method="post">
         <table>
             <tr>
                 <td>E-mail</td>
@@ -57,24 +56,42 @@
                         <option value="2004"> 2004 </option>
                         <option value="2005"> 2005 </option>
                         <option value="2006"> 2006 </option>
+                        <option value="2007"> 2007 </option>
+                        <option value="2008"> 2008 </option>
+                        <option value="2009"> 2009 </option>
+                        <option value="2010"> 2010 </option>
+                        <option value="2011"> 2011 </option>
+                        <option value="2012"> 2012 </option>
+                        <option value="2013"> 2013 </option>
+                        <option value="2014"> 2014 </option>
+                        <option value="2015"> 2015 </option>
+                        <option value="2016"> 2016 </option>
+                        <option value="2017"> 2017 </option>
+                        <option value="2018"> 2018 </option>
+                        <option value="2019"> 2019 </option>
+                        <option value="2020"> 2020 </option>
+                        <option value="2021"> 2021 </option>
+                        <option value="2022"> 2022 </option>
+                        <option value="2023"> 2023 </option>
+                        <option value="2024"> 2024 </option>
+                        <option value="2025"> 2025 </option>
                     </select>
-                    -ый (-ой)
+                    -й
                 </td>
-
             </tr>
             <tr>
                 <td>Я знаю</td>
                 <td>
-                    <label><input type="checkbox" name="lang" value="rus" checked disabled> Русский</label><br>
+                    <label><input type="checkbox" name="lang" value="russian" checked disabled> Русский</label><br>
                     <label><input type="checkbox" name="lang" value="spanish"> Испанский</label><br>
                     <label><input type="checkbox" name="lang" value="german"> Немецкий</label><br>
-                    <label><input type="checkbox" name="lang" value="eng"> Английский</label><br>
+                    <label><input type="checkbox" name="lang" value="english"> Английский</label><br>
                     <label><input type="checkbox" name="lang" value="chinese"> Китайский</label>
                 </td>
             </tr>
             <tr>
                 <td>Обо мне</td>
-                <td><textarea name="about" rows="6" cols="30" placeholder="Напишите коротко о себе"></textarea></td>
+                <td><textarea name="about" rows="7" cols="30" placeholder="Напишите коротко о себе"></textarea></td>
             </tr>
             <tr>
                 <td colspan="2">
@@ -85,5 +102,4 @@
         </table>
     </form>
 </body>
-
 </html>
