--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!doctype html>
+<html>
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Использование float при построении колонок</title>
-
-    <style>
+    <style type="text/css">
         #left {
             background: #ccf;
             width: 200px;
@@ -27,7 +25,6 @@
             background: #cfc;
             box-sizing: border-box;
             overflow: hidden;
-
         }
     </style>
 </head>
