--- a/lab5/lab5_4.html
+++ b/lab5/lab5_4.html
@@ -1,49 +1,41 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!doctype html>
+<html>
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Использование flex при построении колонок</title>
-
-    <style>
-        
+    <style type="text/css">
         .container {
-            display: flex;
-            justify-content: space-between;  /* space-between, space-around */
-            align-content: flex-start;
-            /* flex-direction: row; */
+            min-width: 1000px;
+            display: flex; 
+            justify-content: center;
             flex-flow: nowrap row;
+            align-content: flex-start;
         }
-        
+
         #left,
         #right,
         #center {
-            /* display: inline-block;
-            vertical-align: top; */
             flex: 0 auto;
-            box-sizing: border-box;
-
         }
 
         #left {
             background: #ccf;
             width: 200px;
-
+            margin-right: 10px;
             order: 1;
         }
 
         #right {
             background: #fcc;
             width: 200px;
-
+            margin-left: 10px;
             order: 3;
         }
 
         #center {
             background: #cfc;
             width: 600px;
-
             order: 2;
         }
     </style>
@@ -52,7 +44,6 @@
 <body>
     <div class="container">
         <div id="left">left<br>left<br>left<br>left<br>left</div>
-        <div id="right">right<br>right<br>right<br>right</div>
         <div id="center">center text text text text text text text text text text text text text text text text text
             text
             text text text text text text text text text text text text text text text text text text text text text
@@ -80,6 +71,7 @@
             text text text text text text text text text text text text text text text text text text text text text
             text
             text text text text text text text text text text text text text text text</div>
+        <div id="right">right<br>right<br>right<br>right</div>
     </div>
 </body>
 
