--- a/lab5/lab5_5.html
+++ b/lab5/lab5_5.html
@@ -1,44 +1,36 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!doctype html>
+<html>
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Использование grid при построении колонок</title>
-    <style>  
+    <style type="text/css">
         .container {
+            min-width: 1000px;
             display: grid;
             grid-template-columns: 200px 600px 200px;
             grid-gap: 10px;
-            justify-content: space-between; /* center */
+            justify-content: center; 
         }
         
         #left,
         #right,
         #center {
             flex: 0 auto;
-            box-sizing: border-box;
-
         }
 
         #left {
             background: #ccf;
-            /* width: 200px; */
-
             order: 1;
         }
 
         #right {
             background: #fcc;
-            /* width: 200px; */
-
             order: 3;
         }
 
         #center {
             background: #cfc;
-            /* width: 600px; */
-
             order: 2;
         }
     </style>
@@ -47,7 +39,6 @@
 <body>
     <div class="container">
         <div id="left">left<br>left<br>left<br>left<br>left</div>
-        <div id="right">right<br>right<br>right<br>right</div>
         <div id="center">center text text text text text text text text text text text text text text text text text
             text
             text text text text text text text text text text text text text text text text text text text text text
@@ -75,6 +66,7 @@
             text text text text text text text text text text text text text text text text text text text text text
             text
             text text text text text text text text text text text text text text text</div>
+        <div id="right">right<br>right<br>right<br>right</div>
     </div>
 </body>
 
